--- a/TPW/View/MainWindow.xaml
+++ b/TPW/View/MainWindow.xaml
@@ -5,8 +5,18 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:View"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
+        Title="MyBalls" Height="550" Width="1000"
+        Background="Black">
+    <Grid Background="#FF1A1A1A" Margin="1,1,1,1">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="169*"/>
+            <ColumnDefinition Width="31*"/>
+        </Grid.ColumnDefinitions>
+        <Button x:Name="StartSimulationButton" Grid.Column="1" Content="Start simulation" HorizontalAlignment="Center" VerticalAlignment="Center" Click="StartSimulationButton_Click" Background="#FFCCCCCC"/>
+        <TextBox x:Name="BallsNumberTextBox" Grid.Column="1" HorizontalAlignment="Center" TextWrapping="Wrap" TextAlignment="Left" Text="Number of balls
+                 " VerticalAlignment="Top" Width="120" Background="#FFDFDFDF" BorderBrush="#FFABADB3" BorderThickness="1,1,1,1" Margin="0,206,0,0" RenderTransformOrigin="0.5,0.5"/>
+        <Canvas x:Name="BallsCanvas" Background="#FF2D2D2D" Margin="10,10,10,10"/>
+
     </Grid>
+
 </Window>
