--- a/TPW/Presentation/App.xaml
+++ b/TPW/Presentation/App.xaml
@@ -1,8 +1,8 @@
-﻿<Application x:Class="View.App"
+﻿<Application x:Class="Presentation.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:View"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:Presentation"
+             StartupUri="View/MainWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
